fixed home image aligning

--- a/View/LoginScreen/login.css
+++ b/View/LoginScreen/login.css
@@ -37,25 +37,25 @@
 /*}*/
 
 .leftimg {
-  float:left;
   max-width: 200px;
-  margin-left: 150px;
-  margin-right: 15px;
+  position: absolute;
+  left: 150px;
   z-index: -1;
 }
 .rightimg {
   max-width: 200px;
-  margin-right: 150px;
+  position: absolute;
+  right: 150px;
   z-index: -1;
 }
 
 .container {
-  overflow: visible;
-  width:52%;
+  overflow: hidden;
+  width: 500px;
+  margin: auto;
   border: black solid 1px;
   background-color: #fff;
   border-top: 0px;
-  float:left;
 }
 
 .footer
